--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,9 +9,14 @@
     <string name="listview_header_hint_normal">下拉刷新</string>
     <string name="listview_header_last_time">上次更新时间：</string>
     <string name="listview_header_hint_ready">松开刷新数据</string>
-    <string name="listview_header_hint_loading">正在加载...</string>
+    <string name="listview_header_hint_loading">正在加载…</string>
     <string name="listview_footer_hint_normal">查看更多</string>
     <string name="listview_footer_hint_ready">松开载入更多</string>
     <string name="hello">Hello</string>
 
+    <!-- mina -->
+    <string name="btn_back">返回</string>
+    <string name="btn_send">发送</string>
+    <string name="btn_editmessage_hint">输入聊天内容…</string>
+    
 </resources>
